# IMUOrientationEstimator

./: CMakeLists.txt  README.md
example/: Mahonyfilter.cpp  all.cpp  test.cpp
include/: Estimator.h  Initializer.h  MahonyAHRSupdate.h  Propagator.h  Update.h  Utils.h
src/: Estimator.cpp  Initializer.cpp  MahonyAHRSupdate.cpp  Propagator.cpp  Update.cpp
